--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,6 @@
 body {
   background-color: lightgrey;
-  font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
+  font-family: "Quicksand", sans-serif;
 }
 
 .weather-app {
