--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,9 @@ body {
   font-family: "Quicksand", sans-serif;
 }
 
+a {
+  color: rgb(236, 236, 236);
+}
 .weather-app {
   background: rgb(170, 170, 170);
   max-width: 600px;
@@ -10,4 +13,34 @@ body {
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 16px;
   padding: 30px;
+}
+
+header {
+  border-bottom: 1px solid rgb(155, 154, 154);
+  padding: 0 0 30px 0;
+}
+.search-form-input {
+  background-color: rgb(236, 236, 236);
+  border: none;
+  border-radius: 6px;
+  width: 80%;
+  font-size: 15px;
+  padding: 15px 20px;
+}
+.search-form-button {
+  background-color: grey;
+  padding: 15px 30px;
+  border: none;
+  font-size: 15px;
+  margin-left: 5px;
+  border-radius: 6px;
+  color: white;
+}
+
+footer {
+  border-top: 1px solid rgb(155, 154, 154);
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-weight: 400;
+  font-size: 13px;
 }
