--- a/src/style.css
+++ b/src/style.css
@@ -37,6 +37,11 @@ header {
   color: white;
 }
 
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+}
+
 footer {
   border-top: 1px solid rgb(155, 154, 154);
   padding: 30px 0 0 0;
