--- a/src/style.css
+++ b/src/style.css
@@ -37,14 +37,33 @@ header {
   color: white;
 }
 
+main {
+  padding: 30px 0;
+}
+
 .weather-app-data {
   display: flex;
   justify-content: space-between;
 }
 
+.weather-app-city {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+}
+.weather-app-details {
+  font-size: 16px;
+  line-height: 20px;
+  line-height: 24px;
+  font-weight: 500;
+}
+
+.weather-app-details strong {
+  color: rgb(236, 236, 236);
+}
 footer {
   border-top: 1px solid rgb(155, 154, 154);
-  padding: 30px 0 0 0;
+  padding: 23px 0 0 0;
   text-align: center;
   font-weight: 400;
   font-size: 13px;
