--- a/src/style.css
+++ b/src/style.css
@@ -58,6 +58,20 @@ main {
   font-weight: 500;
 }
 
+.weather-app-temperature-container {
+  display: flex;
+}
+
+.weather-app-temperature {
+  font-size: 88px;
+  margin-left: 44px;
+  font-weight: bold;
+}
+
+.weather-app-icon {
+  font-size: 44px;
+  margin-top: 22px;
+}
 .weather-app-details strong {
   color: rgb(236, 236, 236);
 }
