--- a/src/style.css
+++ b/src/style.css
@@ -62,15 +62,20 @@ main {
   display: flex;
 }
 
-.weather-app-temperature {
-  font-size: 88px;
-  margin-left: 44px;
-  font-weight: bold;
-}
-
 .weather-app-icon {
   font-size: 44px;
   margin-top: 22px;
+}
+
+.weather-app-temperature {
+  font-size: 80px;
+  margin-left: 10px;
+  font-weight: bold;
+}
+
+.weather-app-unit {
+  margin-top: 18px;
+  font-size: 28px;
 }
 .weather-app-details strong {
   color: rgb(236, 236, 236);
