--- a/src/style.css
+++ b/src/style.css
@@ -63,18 +63,20 @@ main {
 }
 
 .weather-app-icon {
-  font-size: 44px;
+  width: 88px;
+  height: 88px;
   margin-top: 22px;
 }
 
 .weather-app-temperature {
   font-size: 80px;
-  margin-left: 10px;
+
+  line-height: 88px;
   font-weight: bold;
 }
 
 .weather-app-unit {
-  margin-top: 18px;
+  margin-top: 6px;
   font-size: 28px;
 }
 .weather-app-details strong {
